# tweetnacl-cpp

./: CMakeLists.txt
src/: cryptonacl.h  tweetnacl.cpp  tweetnacl.h
test/: CMakeLists.txt  bench.cpp  randombytes.c  randombytes.h  test.cpp
